<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 登录 -->
    <string name="login_title">登录</string>
    <string name="login_register">注册</string>
    <string name="login_username">用户名</string>
    <string name="login_please_input_username">请输入用户名</string>
    <string name="login_password">密码</string>
    <string name="login_please_input_password">请输入密码</string>
    <string name="login_hint">提示：如您忘记密码，重新注册即可</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败，%1$s</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_course_order_id">课程订单号</string>
    <string name="register_please_input_course_order_id_last_4_digits">请输入课程订单号后4位</string>
    <string name="register_mooc_id">慕课网ID</string>
    <string name="register_please_input_mooc_id">请输入慕课网用户ID</string>
    <string name="register_username">用户名</string>
    <string name="register_please_input_username">请输入用户名</string>
    <string name="register_password">密码</string>
    <string name="register_please_input_password">请输入密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_please_confirm_password_again">请再次确认密码</string>
    <string name="register_submit">提交</string>
    <string name="register_username_last_6_digits">用户名长度规则：6–12位</string>
    <string name="register_password_last_6_digits">密码长度规则：6–20位</string>
    <string name="register_confirm_password_failure">密码验证失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败：%1$s</string>
</resources>